<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".activities.ChangePasswordActivity">


    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ChangePassword"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/newPassword"
        android:hint="@string/NewPassword"
        android:layout_marginTop="30dp" />


    <EditText
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/NewPasswordConfirmation"
        android:id="@+id/newPasswordConfirmation"
        android:layout_gravity="center_horizontal" />




    <EditText
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/oldPassword"
        android:hint="@string/OldPassword"
        android:layout_gravity="center_horizontal" />

    <Button
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnChangePassword"
        android:text="@string/ChangePassword"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
