<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragments.ChangeOrRemoveCompanyFragment">

   
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_login"
            layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar_login"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txt_company"
                android:id="@+id/select_work" />


            <Spinner
                android:id="@+id/spinner_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="37dp"
                android:entries="@array/company_names" />

            <EditText
                android:id="@+id/etCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_company_hint"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/etHourlyWage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_hourly_wage_hint"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/change"
                android:layout_marginBottom="0dp" />
            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/delete"
                android:layout_marginBottom="0dp" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/item_vertical_margin"
            android:layout_marginLeft="@dimen/item_vertical_margin"
            android:layout_marginRight="@dimen/item_vertical_margin"
            android:text="@string/back" />


    </RelativeLayout>




