<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:workpassId="@+workpassId/toolbar_login"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@workpassId/toolbar_login"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:workpassId="@+workpassId/info_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_description"
            style="@style/AppTheme.Title"/>

        <EditText
            android:workpassId="@+workpassId/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_vertical_margin"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:ems="10" />

        <EditText
            android:workpassId="@+workpassId/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_vertical_margin"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password_hint" />

        <Button
            android:workpassId="@+workpassId/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_vertical_margin"
            android:text="@string/btn_login"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_marginTop="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Forgot your password? \n Press here"
            android:workpassId="@+workpassId/tvNewPassword"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:clickable="true" />

    </LinearLayout>

    <Button
        android:workpassId="@+workpassId/btn_create_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/item_vertical_margin"
        android:layout_marginLeft="@dimen/item_vertical_margin"
        android:layout_marginRight="@dimen/item_vertical_margin"
        android:text="@string/btn_create_account" />


</RelativeLayout>