<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.programmingknowledge.addcompanysql.MainActivity"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textAppearance="?android:attr/textAppearanceLarge"

            android:workpassId="@+workpassId/select_work"
            android:layout_gravity="center_horizontal" />


        <Spinner
            android:workpassId="@+workpassId/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:spinnerMode="dropdown" />

        <EditText
            android:workpassId="@+workpassId/etCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_company_hint"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:workpassId="@+workpassId/etHourly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hourly_wage_hint"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <Button
            android:workpassId="@+workpassId/btn_addCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/add"
            android:layout_marginBottom="0dp" />

        <Button
            android:workpassId="@+workpassId/btn_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/change"
            android:layout_marginBottom="0dp" />

        <Button
            android:workpassId="@+workpassId/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/delete"
            android:layout_marginBottom="0dp" />




    </LinearLayout>


</RelativeLayout>
