<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="com.lhadalo.oladahl.autowork.fragments.ChangeUserinfoFragment">


    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Change UserInfo"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFirstname"
        android:hint="@string/et_first_name_hint"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLastname"
        android:hint="@string/et_last_name_hint"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:hint="@string/et_email_hint"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password_hint"
        android:id="@+id/etPassword"
        android:layout_gravity="center_horizontal" />

    <Button
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Userinfo"
        android:id="@+id/btnChangeUserInfo"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
